tests/negative/gold/global_no_value_test.gold
tests/negative/global_no_value_test.toit:3:1: error: Global variables must have initializers
global / any
^~~~~~
Compilation failed.
